--- a/qml.qrc
+++ b/qml.qrc
@@ -1,7 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>Page1.qml</file>
-        <file>Page1Form.ui.qml</file>
+        <file>LabelDial.qml</file>
     </qresource>
 </RCC>
